--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -8,7 +8,6 @@
     xmlns:converter="clr-namespace:Client_App.VisualRealization.Converters"
 	xmlns:local="using:Client_App.Behaviors"
 	xmlns:interactivity="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
-	xmlns:behaviors="using:Avalonia.Xaml.Interactions.Core"
     xmlns:forms="clr-namespace:Models.Forms.Form1;assembly=Models"
     Title="{Binding WindowTitle}"
     d:DesignHeight="450"
@@ -20,8 +19,6 @@
 	MinWidth="800" MinHeight="600">
 
     <Window.Resources>
-		<converter:DataGridLengthToGridLengthConverter x:Key="LengthConverter"/>
-		<converter:NullToStringConverter x:Key="NullToStringConverter"/>
 		<converter:DateConverter x:Key="DateConverter"/>
     </Window.Resources>
 
@@ -50,24 +47,24 @@
                             <Grid ColumnDefinitions="*,*"  Grid.Row="0">
 							    <TextBlock Grid.Column="0" Margin="5" >Дата окончания предыдущего отчетного периода:</TextBlock>
 							    <CalendarDatePicker Grid.Column="1" 
-                                    SelectedDate="{Binding CurrentReport.StartPeriod.Value, Converter={StaticResource DateConverter}}"/>
+                                    SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"/>
 						    </Grid>
 
 						    <Grid ColumnDefinitions="*,*"  Grid.Row="1">
 							    <TextBlock Grid.Column="0" Margin="5" >Дата окончания настоящего отчетного периода:</TextBlock>
 							    <CalendarDatePicker Grid.Column="1" 
-                                    SelectedDate="{Binding CurrentReport.EndPeriod.Value, Converter={StaticResource DateConverter}}"/>
+                                    SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"/>
 						    </Grid>
 
 						    <StackPanel  Orientation="Horizontal" Grid.Row="2">
 							    <TextBlock Margin="5">Номер корректировки:</TextBlock>
 							    <TextBox Margin="5" Width="75"
-                                    Text="{Binding Path=CurrentReport.CorrectionNumber.Value}"></TextBox>
+                                    Text="{Binding Path=Report.CorrectionNumber.Value}"></TextBox>
 						    </StackPanel>
 						
 						    <StackPanel Orientation="Horizontal" Grid.Row="3">
 							    <Button Margin="5" Command="{Binding CheckForm}">Проверить</Button>
-							    <Button Margin="5" >Сохранить</Button>
+							    <Button Margin="5" Command="{Binding SaveReport}">Сохранить</Button>
 						    </StackPanel>
 
 						    <StackPanel Orientation="Horizontal"  Grid.Row="4">
@@ -81,16 +78,16 @@
 					    <Grid Margin="5" RowDefinitions ="*,*,*,*,*" ColumnDefinitions="*,2*">
 						    <TextBlock Grid.Row="0" Grid.Column="0" Margin="5" >ФИО исполнителя:</TextBlock>
 						    <TextBox Grid.Row="0" Grid.Column="1" Margin="5"
-                                    Text="{Binding Path=CurrentReport.FIOexecutor.Value}"></TextBox>
+                                    Text="{Binding Path=Report.FIOexecutor.Value}"></TextBox>
 						    <TextBlock Grid.Row="1" Grid.Column="0" Margin="5" >Должность:</TextBlock>
 						    <TextBox Grid.Row="1" Grid.Column="1" Margin="5"
-                                    Text="{Binding Path=CurrentReport.GradeExecutor.Value}" ></TextBox>
+                                    Text="{Binding Path=Report.GradeExecutor.Value}" ></TextBox>
 						    <TextBlock Grid.Row="2" Grid.Column="0" Margin="5" >Телефон:</TextBlock>
 						    <TextBox Grid.Row="2" Grid.Column="1" Margin="5"
-                                    Text="{Binding Path=CurrentReport.ExecPhone.Value}"></TextBox>
+                                    Text="{Binding Path=Report.ExecPhone.Value}"></TextBox>
 						    <TextBlock Grid.Row="3" Grid.Column="0" Margin="5" >Электронная почта:</TextBlock>
 						    <TextBox Grid.Row="3" Grid.Column="1" Margin="5"
-                                    Text="{Binding Path=CurrentReport.ExecEmail.Value}"></TextBox>
+                                    Text="{Binding Path=Report.ExecEmail.Value}"></TextBox>
 						    <Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Click="CopyExecutorData_Click">Скопировать данные предыдущей формы</Button>
 					    </Grid>
 				    </Border>
@@ -130,9 +127,9 @@
                             <MenuItem Header="Выставить номер			Ctrl+O"
                                       Command="{Binding SetNumberOrder}"
                                       HotKey="Ctrl+O"/>
-                            <MenuItem Header="Сортировать по номеру п/п	Ctrl+L"
+                            <!--<MenuItem Header="Сортировать по номеру п/п	Ctrl+L"
                                       Command="{Binding SortForms}"
-                                      HotKey="Ctrl+L"/>
+                                      HotKey="Ctrl+L"/> -->
                             <MenuItem Header="Очистить строчки	        Ctrl+K"
                                       Command="{Binding DeleteDataInRows}"
                                       CommandParameter="{Binding SelectedForms12}"
@@ -241,7 +238,7 @@
                         SelectedItem="{Binding SelectedForm12}">
                         <interactivity:Interaction.Behaviors>
                             <local:DataGridDragSelectionBehavior/>
-                            <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms12, Mode=TwoWay}" />
+                            <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						</interactivity:Interaction.Behaviors>
                         <DataGrid.Columns>
 
@@ -259,7 +256,7 @@
                             <DataGridTemplateColumn Header="2">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -275,7 +272,7 @@
                             <DataGridTemplateColumn Header="4">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -283,7 +280,7 @@
                             <DataGridTemplateColumn Header="5">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding NameIOU.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding NameIOU.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -291,7 +288,7 @@
                             <DataGridTemplateColumn Header="6">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -299,7 +296,7 @@
                             <DataGridTemplateColumn Header="7">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding Mass.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding Mass.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -307,7 +304,7 @@
                             <DataGridTemplateColumn Header="8">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -324,7 +321,7 @@
 											Header="10">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -332,7 +329,7 @@
                             <DataGridTemplateColumn Header="11">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -340,7 +337,7 @@
                             <DataGridTemplateColumn Header="12">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding Owner.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding Owner.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -348,7 +345,7 @@
                             <DataGridTemplateColumn Header="13">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -356,7 +353,7 @@
                             <DataGridTemplateColumn Header="14">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -372,7 +369,7 @@
                             <DataGridTemplateColumn Header="16">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -380,7 +377,7 @@
                             <DataGridTemplateColumn Header="17">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -388,7 +385,7 @@
                             <DataGridTemplateColumn Header="18">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding PackName.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding PackName.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -396,7 +393,7 @@
                             <DataGridTemplateColumn Header="19">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding PackType.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding PackType.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -404,7 +401,7 @@
                             <DataGridTemplateColumn Header="20">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -476,9 +473,10 @@
 						    <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}" />
 					    </interactivity:Interaction.Behaviors>
                         <DataGrid.Columns>
-						    <DataGridTextColumn Width="80"
-											    Header="№ строки"
-											    Binding="{Binding RowNumber.Value}"/>
+
+                            <DataGridTextColumn Width="80"
+                                                Header="№ строки"
+                                                Binding="{Binding RowNumber.Value}"/>
 						    <DataGridTextColumn Width="80"
 											    Header="№ графы"
 											    Binding="{Binding GraphNumber.Value}"/>
