--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -8,7 +8,8 @@
     xmlns:converter="clr-namespace:Client_App.VisualRealization.Converters"
 	xmlns:local="using:Client_App.Behaviors"
 	xmlns:interactivity="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
-    xmlns:forms="clr-namespace:Models.Forms.Form1;assembly=Models"
+    xmlns:forms1="clr-namespace:Models.Forms.Form1;assembly=Models"
+    xmlns:forms="clr-namespace:Models.Forms;assembly=Models"
 	xmlns:behaviors="using:Avalonia.Xaml.Interactions.Core"
     Title="{Binding WindowTitle}"
     d:DesignHeight="450"
@@ -49,14 +50,18 @@
 
                             <Grid ColumnDefinitions="*,*"  Grid.Row="0">
 							    <TextBlock Grid.Column="0" Margin="5" >Дата окончания предыдущего отчетного периода:</TextBlock>
-							    <CalendarDatePicker Grid.Column="1" 
-                                    SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"/>
+							    <CalendarDatePicker Grid.Column="1"
+                                    SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"
+                                    Watermark="дд.мм.гггг"/>
 						    </Grid>
 
 						    <Grid ColumnDefinitions="*,*"  Grid.Row="1">
 							    <TextBlock Grid.Column="0" Margin="5" >Дата окончания настоящего отчетного периода:</TextBlock>
-							    <CalendarDatePicker Grid.Column="1" 
-                                    SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"/>
+							    <CalendarDatePicker 
+                                    Grid.Column="1" 
+                                    Margin="10.5,3,0,0"
+                                    SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"
+                                    Watermark="дд.мм.гггг"/>
 						    </Grid>
 
 						    <StackPanel  Orientation="Horizontal" Grid.Row="2">
@@ -79,19 +84,44 @@
 
 				    <Border Classes="borderContainer">
 					    <Grid Margin="5" RowDefinitions ="*,*,*,*,*" ColumnDefinitions="*,2*">
-						    <TextBlock Grid.Row="0" Grid.Column="0" Margin="5" >ФИО исполнителя:</TextBlock>
-						    <TextBox Grid.Row="0" Grid.Column="1" Margin="5"
-                                    Text="{Binding Path=Report.FIOexecutor.Value}"></TextBox>
-						    <TextBlock Grid.Row="1" Grid.Column="0" Margin="5" >Должность:</TextBlock>
-						    <TextBox Grid.Row="1" Grid.Column="1" Margin="5"
-                                    Text="{Binding Path=Report.GradeExecutor.Value}" ></TextBox>
-						    <TextBlock Grid.Row="2" Grid.Column="0" Margin="5" >Телефон:</TextBlock>
-						    <TextBox Grid.Row="2" Grid.Column="1" Margin="5"
-                                    Text="{Binding Path=Report.ExecPhone.Value}"></TextBox>
-						    <TextBlock Grid.Row="3" Grid.Column="0" Margin="5" >Электронная почта:</TextBlock>
-						    <TextBox Grid.Row="3" Grid.Column="1" Margin="5"
-                                    Text="{Binding Path=Report.ExecEmail.Value}"></TextBox>
-						    <Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Click="CopyExecutorData_Click">Скопировать данные предыдущей формы</Button>
+						    <TextBlock Grid.Row="0" 
+                                       Grid.Column="0" 
+                                       Margin="5" 
+                                       Text="ФИО исполнителя:"/>
+						    <TextBox Grid.Row="0" 
+                                     Grid.Column="1" 
+                                     Margin="5"
+                                     Text="{Binding Path=Report.FIOexecutor.Value}"/>
+						    <TextBlock Grid.Row="1" 
+                                       Grid.Column="0" 
+                                       Margin="5" 
+                                       Text="Должность:"/>
+						    <TextBox Grid.Row="1" 
+                                     Grid.Column="1" 
+                                     Margin="5"
+                                    Text="{Binding Path=Report.GradeExecutor.Value}"/>
+						    <TextBlock Grid.Row="2" 
+                                       Grid.Column="0" 
+                                       Margin="5" 
+                                       Text="Телефон:"/>
+						    <TextBox Grid.Row="2" 
+                                     Grid.Column="1" 
+                                     Margin="5"
+                                     Text="{Binding Path=Report.ExecPhone.Value}"/>
+						    <TextBlock Grid.Row="3" 
+                                       Grid.Column="0" 
+                                       Margin="5" 
+                                       Text="Электронная почта:"/>
+						    <TextBox Grid.Row="3" 
+                                     Grid.Column="1" 
+                                     Margin="5" 
+                                     Text="{Binding Path=Report.ExecEmail.Value}"/>
+						    <Button Grid.Row="4" 
+                                    Grid.Column="0" 
+                                    Grid.ColumnSpan="2" 
+                                    Margin="5" 
+                                    Click="CopyExecutorData_Click" 
+                                    Content="Скопировать данные предыдущей формы"/>
 					    </Grid>
 				    </Border>
                     <Button Command="{Binding SourceTransmissionAll}"> Перевести все РВ в РАО</Button>
@@ -247,13 +277,14 @@
 						    <local:DataGridDoubleClickBehavior/>
 						</interactivity:Interaction.Behaviors>
                         <DataGrid.Columns>
+
                             <DataGridTextColumn Header="1"
                                                 Binding="{Binding NumberInOrder.Value}"
                                                 IsReadOnly="True"/>
 
                             <DataGridTemplateColumn Header="2">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -261,7 +292,7 @@
 
                             <DataGridTemplateColumn Header="3">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <CalendarDatePicker SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -269,7 +300,7 @@
 
                             <DataGridTemplateColumn Header="4" Width="80">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -277,7 +308,7 @@
 
                             <DataGridTemplateColumn Header="5"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding NameIOU.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -285,7 +316,7 @@
 
                             <DataGridTemplateColumn Header="6">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -293,7 +324,7 @@
 
                             <DataGridTemplateColumn Header="7"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding Mass.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -301,7 +332,7 @@
 
                             <DataGridTemplateColumn Header="8"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -309,7 +340,7 @@
 
                             <DataGridTemplateColumn Header="9">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <CalendarDatePicker SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -318,7 +349,7 @@
                             <DataGridTemplateColumn
 												Header="10">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -326,7 +357,7 @@
 
                             <DataGridTemplateColumn Header="11"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -334,7 +365,7 @@
 
                             <DataGridTemplateColumn Header="12"  Width="110">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding Owner.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -342,7 +373,7 @@
 
                             <DataGridTemplateColumn Header="13">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -350,7 +381,7 @@
 
                             <DataGridTemplateColumn Header="14">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -358,15 +389,15 @@
 
                             <DataGridTemplateColumn Header="15">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <CalendarDatePicker SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay}"/>
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
+                                        <CalendarDatePicker SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
                             <DataGridTemplateColumn Header="16" Width="110">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -374,7 +405,7 @@
 
                             <DataGridTemplateColumn Header="17" Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -382,7 +413,7 @@
 
                             <DataGridTemplateColumn Header="18" Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding PackName.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -390,7 +421,7 @@
 
                             <DataGridTemplateColumn Header="19">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding PackType.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -398,7 +429,7 @@
 
                             <DataGridTemplateColumn Header="20">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form12">
                                         <TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -474,7 +505,7 @@
                         <DataGrid.Columns>
 						    <DataGridTemplateColumn Header="№ строки" Width="80">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
                                         <TextBox Text="{Binding RowNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -482,7 +513,7 @@
 							
                             <DataGridTemplateColumn Header="№ графы" Width="80">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
                                         <TextBox Text="{Binding GraphNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -490,7 +521,7 @@
 							
                             <DataGridTemplateColumn Header="Пояснения" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
                                         <TextBox Text="{Binding Comment.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
